<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TPMS - RUS</string>
    <string name="aianzuo_spjiaohuan">FL and Spare tire exchange</string>
    <string name="version_info">Version Information</string>
    <string name="spare_tire">Spare tire:</string>
    <string name="dianjikaishianniujintupeidui">Press the pair button to start</string>
    <string name="dianyabaojin">Low battery alarm</string>
    <string name="low_pwr">Low pwr.</string>
    <string name="houyou_spjiaohuan">RR and Spare tire exchange</string>
    <string name="houzou_spjiaohuan">RL and Spare tire exchange</string>
    <string name="huifumorenzhi">Restore to default</string>
    <string name="idmapeidui">ID code pair</string>
    <string name="jiaohuanchenggong">Tyre exchange succeeded</string>
    <string name="kaishihuhuang">To exchange</string>
    <string name="to_pair">To pair</string>
    <string name="lianjieyichang">CXN.failed</string>
    <string name="lianjieyichangbaojin">Abnormal connecction alarm</string>
    <string name="leaking">Leaking…</string>
    <string name="luntaixiangtongjingaobutishe">Don\'t display the same warning for single tyre</string>
    <string name="morengzhi">Default</string>
    <string name="qianyou_spjiaohuan">FR and Spare tire exchange</string>
    <string name="qinxuanzeyaopeiduideluntai">Please select the desired tyre</string>
    <string name="quanbuhuifumorenzhi">Reset all settings?</string>
    <string name="cancel_swap">Cancel swap</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="shengyinbaojin">Sound alarm</string>
    <string name="spare_tire_enable">Display spare tyre data</string>
    <string name="taiyadanwei">Press. Type</string>
    <string name="low_press">Low press.</string>
    <string name="taiyaguogao">High press.</string>
    <string name="taiyahuhuan">Tyre exchange</string>
    <string name="taiyahuhuanshibai">Tyre exchange failed.</string>
    <string name="taiyalianjieshibai">Caution! TPMS is not working.</string>
    <string name="taiyasheding">TPMS setup</string>
    <string name="taiyashibeicuowu">TPMS device error</string>
    <string name="taiyazhengchang">Normal</string>
    <string name="tanchukuangbaojin">Pop up alarm</string>
    <string name="tenminiter">In 10 minutes</string>
    <string name="tenthereminiter">In 30 minutes</string>
    <string name="tentwominiter">In 20 minutes</string>
    <string name="wendudanwei">Temp.type</string>
    <string name="wengduguogao">High temp.</string>
    <string name="xihuoqian">Before engine off</string>
    <string name="xingxiduqushibai">Information read failed.</string>
    <string name="xuexichenggong">ID code paired</string>
    <string name="yichangzhudongbaojin">Abnormal tyre alarm</string>
    <string name="youhouluntai">RR tire:</string>
    <string name="youqianluntai">FR tire:</string>
    <string name="youqianyouhoujiaohuan">FR and RR exchange</string>
    <string name="youqianzuohoujiaohuan">FR and RL exchange</string>
    <string name="zhengzaiduquzhong">Loading…</string>
    <string name="zhengzaipeidui">Pairing…</string>
    <string name="zhengzeihuhuan">Exchanging…</string>
    <string name="zhuangtailantaiya">TPMS</string>
    <string name="zhuangtailantaiyazhengchang">Tire pressure is properly.</string>
    <string name="rl_tire">RL tire:</string>
    <string name="fl_tire">FL tire:</string>
    <string name="ztltaiyayichang">Abnormal tire pressure, click for details!</string>
    <string name="zuidibojintaiya">L press.alarm lim.</string>
    <string name="zuigaobaojintaiya">H press. alarm lim.</string>
    <string name="zuigaowendubaojin">H temp.alarm lim.</string>
    <string name="zuohouyouhoujiaohuan">RL and RR exchange</string>
    <string name="zuoqianyouhoujiaohuan">FL and RR exchange</string>
    <string name="zuoqianyouqianjiaohuan">FL and FR exchange</string>
    <string name="zuoqianzuohoujiaohuan">FL and RL exchange</string>

    <string name="test_hand_work">握手</string>
    <string name="test_query">查旬</string>
    <string name="test_query_front_left">查旬前左轮id</string>
    <string name="test_query_two_back">查旬两后轮id</string>
    <string name="test_btn_enter_apk">进入应用</string>
    <string name="test_btn_exchangeing">正在互换</string>
    <string name="test_btn_exchange_failed">互换失败</string>
    <string name="test_btn_reset_data">恢复默认</string>
    <string name="btn_btn_open_usb">打开USB</string>
    <string name="test_btn_close_usb">关闭USB</string>
    <string name="test_btn_get_px">获取分辩信息</string>
    <string name="test_btn_notif_ok">正常状态</string>
    <string name="test_btn_notif_error">错误状态</string>
    <string name="test_btn_play_sound">播放声音</string>
    <string name="test_btn_stop_sound">停声音</string>
    <string name="test_btn_stop_data">停止数据</string>
    <string name="test_btn_start_data">开启数据</string>
    <string name="test_btn_click_toast">告警浮动框</string>
    <string name="test_btn_time_select">时间选择框</string>
</resources>
