<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="horizontal">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                android:id="@+id/hand_work"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/test_hand_work" />

            <Button
                android:id="@+id/query"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/test_query" />

            <Button
                android:id="@+id/query_front_left"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/test_query_front_left" />

            <Button
                android:id="@+id/query_two_back"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/test_query_two_back" />

            <Button
                android:id="@+id/btn_enter_apk"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_enter_apk" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_exchangeing"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_exchangeing" />

            <Button
                android:id="@+id/btn_exchange_failed"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_exchange_failed"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_reset_data"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_reset_data"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_open_usb"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/btn_btn_open_usb" />

            <Button
                android:id="@+id/btn_close_usb"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_close_usb" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_get_px"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_get_px" />

            <TextView
                android:id="@+id/tv_screen_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="text" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_notif_ok"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_notif_ok" />

            <Button
                android:id="@+id/btn_notif_error"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_notif_error" />

            <Button
                android:id="@+id/btn_play_sound"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_play_sound" />

            <Button
                android:id="@+id/btn_stop_sound"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_stop_sound" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_stop_data"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_stop_data" />

            <Button
                android:id="@+id/btn_start_data"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="@string/test_btn_start_data" />

            <Button
                android:id="@+id/btn_start_datat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fr_fl_level"
                android:text="level" />

            <Button
                android:id="@+id/btn_error"
                android:layout_width="253px"
                android:layout_height="wrap_content"
                android:text="error" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40px"
        android:background="#313131"
        android:visibility="gone">

        <TextView
            android:id="@+id/mcu_ver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text=""
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_click_toast"
            android:layout_width="253px"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="380px"
            android:text="@string/test_btn_click_toast" />

        <Button
            android:id="@+id/btn_time_select"
            android:layout_width="253px"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="120px"
            android:text="@string/test_btn_time_select" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20px"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
