<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_exchange_hint"
            android:layout_width="match_parent"
            android:layout_height="60px"
            android:layout_marginLeft="10px"
            android:layout_marginBottom="15px"
            android:gravity="center"
            android:text=""
            android:textSize="24px" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20px"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deputy_master"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fr_fl_level"
                android:contentDescription="@string/zuoqianyouqianjiaohuan"
                android:gravity="center"
                android:textColor="#fff" />

            <Button
                android:id="@+id/mater_updown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:background="@drawable/fl_bl_level"
                android:contentDescription="@string/zuoqianzuohoujiaohuan"
                android:gravity="center"
                android:textColor="#fff" />

            <Button
                android:id="@+id/master_cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/fl_br_level"
                android:contentDescription="@string/zuoqianyouhoujiaohuan"
                android:gravity="center"
                android:textColor="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deputy_cross"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bl_fr_level"
                android:contentDescription="@string/youqianzuohoujiaohuan"
                android:gravity="center"
                android:textColor="#fff" />

            <Button
                android:id="@+id/deputy_updown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:background="@drawable/fr_br_level"
                android:contentDescription="@string/youqianyouhoujiaohuan"
                android:gravity="center"
                android:textColor="#fff" />

            <Button
                android:id="@+id/back_exchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bl_br_level"
                android:contentDescription="@string/zuohouyouhoujiaohuan"
                android:gravity="center"
                android:textColor="#fff" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_start_exchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:background="@drawable/btn_start_exchange_selector"
            android:text="@string/kaishihuhuang" />

        <Button
            android:id="@+id/btn_cannel_exchange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_cannel_exchange_selector"
            android:text="@string/cancel_swap" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_exchange"
            android:layout_width="314px"
            android:layout_height="367px"
            android:background="@drawable/exchange_nosptires_level" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_sp_fl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sp_fl_level"
            android:contentDescription="@string/aianzuo_spjiaohuan" />

        <Button
            android:id="@+id/btn_sp_fr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8px"
            android:layout_marginBottom="8px"
            android:background="@drawable/sp_fr_level"
            android:contentDescription="@string/qianyou_spjiaohuan" />

        <Button
            android:id="@+id/btn_sp_bl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sp_bl_level"
            android:contentDescription="@string/houzou_spjiaohuan" />

        <Button
            android:id="@+id/btn_sp_br"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8px"
            android:layout_marginBottom="5px"
            android:background="@drawable/sp_br_level"
            android:contentDescription="@string/houyou_spjiaohuan" />
    </LinearLayout>
</LinearLayout>
