<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/time_dialog_plane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#88888888"
    android:gravity="center">

    <LinearLayout
        android:layout_width="470px"
        android:layout_height="380px"
        android:background="#000"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:layout_marginTop="10px"
            android:layout_marginRight="10px"
            android:layout_marginBottom="10px"
            android:text="@string/luntaixiangtongjingaobutishe"
            android:textColor="#fff"
            android:textSize="27px" />

        <View
            android:layout_width="380px"
            android:layout_height="1px"
            android:background="#fff" />&quot;
        <LinearLayout
            android:id="@+id/time_select"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8px"
            android:orientation="vertical">

            <Button
                android:id="@+id/mainbtn_0"
                android:layout_width="440px"
                android:layout_height="64px"
                android:gravity="center"
                android:tag="600"
                android:text="@string/tenminiter"
                android:textSize="25px" />

            <Button
                android:id="@+id/mainbtn_1"
                android:layout_width="440px"
                android:layout_height="64px"
                android:gravity="center"
                android:tag="1200"
                android:text="@string/tentwominiter"
                android:textSize="25px" />

            <Button
                android:id="@+id/mainbtn_2"
                android:layout_width="440px"
                android:layout_height="64px"
                android:gravity="center"
                android:tag="1800"
                android:text="@string/tenthereminiter"
                android:textSize="25px" />

            <Button
                android:id="@+id/mainbtn_3"
                android:layout_width="440px"
                android:layout_height="64px"
                android:layout_marginBottom="14px"
                android:gravity="center"
                android:tag="9223372036854775807"
                android:text="@string/xihuoqian"
                android:textSize="23px" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
